src/objects/Legal_Documents__c.object
<CustomObject>
    <description>This is an object for attaching legal documents.</description>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Director of Legal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>125</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Documents__c</fullName>
        <inlineHelpText>Please attach any legal documents for review</inlineHelpText>
        <label>Legal Documents</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Legal Documents</relationshipLabel>
        <relationshipName>Legal_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>No review needed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Legal review requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Legal Documents</label>
    <nameField>
        <displayFormat>LGL-{0000}</displayFormat>
        <label>Legal Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>